--- a/index.html
+++ b/index.html
@@ -155,9 +155,7 @@
   <div class="balance-display" onclick="toggleRank()">💎 <span id="mainBalance">0</span></div>
 </div>
 <div>
-<marquee style="flex:1; color:var(--gold);">連連看、消消樂修復了BUG，新增combo與最高分機制</marquee>
-<marquee style="flex:1; color:var(--gold);">賽馬場賠率與馬匹能力值調整，略微提高黑馬勝率，新增梭哈功能</marquee>
-<marquee style="flex:1; color:var(--gold);">有特殊模式的遊戲跟骰寶加上了未開局數</marquee>
+<marquee style="flex:1; color:var(--gold);">線上測試版</marquee>
 </div>
 
 <div class="container">
@@ -171,10 +169,10 @@
       </div>
     </a>
 
-    <a href="slot.html" class="game-card">
+    <a href="#" class="game-card">
       <div class="game-img" style="background: linear-gradient(45deg, #4a0404, #2a0202);">🎰</div>
       <div class="game-info">
-        <div class="game-title">777拉霸機</div>
+        <div class="game-title">(暫無)777拉霸機</div>
       </div>
     </a>
     <a href="horse.html" class="game-card">
@@ -189,10 +187,10 @@
         <div class="game-title">寶石礦坑</div>
       </div>
     </a>
-    <a href="link.html" class="game-card">
+    <a href="#" class="game-card">
       <div class="game-img" style="background: linear-gradient(45deg, #0f3fc4, #12e7f6);">🐲</div>
       <div class="game-info">
-        <div class="game-title">消消樂</div>
+        <div class="game-title">(暫無)消消樂</div>
       </div>
     </a>
     <a href="mahj.html" class="game-card">
@@ -207,16 +205,16 @@
         <div class="game-title">愛心</div>
       </div>
     </a>
-    <a href="foodlink.html" class="game-card">
+    <a href="#" class="game-card">
       <div class="game-img" style="background: linear-gradient(45deg, #f1c1c1, #56f19e);">🍰</div>
       <div class="game-info">
-        <div class="game-title">連連看</div>
+        <div class="game-title">(暫無)連連看</div>
       </div>
     </a>
-    <a href="gua.html" class="game-card">
+    <a href="#" class="game-card">
       <div class="game-img" style="background: linear-gradient(45deg, #312222, #bad7c7);">🧧</div>
       <div class="game-info">
-        <div class="game-title">未完成刮刮樂</div>
+        <div class="game-title">(暫無)未完成刮刮樂</div>
       </div>
     </a>
   </div>
@@ -255,7 +253,7 @@
 <div id="nameModal" class="modal">
   <div class="modal-content">
     <h2 style="color:var(--gold);">請輸入遊戲暱稱</h2>
-    <p style="color:#ccc; font-size:14px;">請勿輸入真人名稱，排行榜會顯示</p>
+    <p style="color:#ccc; font-size:14px;">請勿輸入真人名，排行榜會顯示</p>
     <input type="text" id="nicknameInput" placeholder="最多8個字" maxlength="8">
     <button class="modal-btn" style="background:var(--red);" onclick="saveNewPlayer()">進入遊戲</button>
   </div>
